--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -19,4 +19,19 @@
         android:name="codes.malukimuthusi.commhealth.diseaseView.DiseaseFragment"
         android:label="disease_fragment"
         tools:layout="@layout/disease_fragment" />
+    <fragment
+        android:id="@+id/basicFormFragment"
+        android:name="codes.malukimuthusi.commhealth.dataInput.BasicFormFragment"
+        android:label="basic_form_fragment"
+        tools:layout="@layout/basic_form_fragment" />
+    <fragment
+        android:id="@+id/callHelpFragment"
+        android:name="codes.malukimuthusi.commhealth.call.CallHelpFragment"
+        android:label="call_help_fragment"
+        tools:layout="@layout/call_help_fragment" />
+    <fragment
+        android:id="@+id/recentActivityFragment"
+        android:name="codes.malukimuthusi.commhealth.recentActivity.RecentActivityFragment"
+        android:label="recent_activity_fragment"
+        tools:layout="@layout/recent_activity_fragment" />
 </navigation>
