--- a/app/src/main/res/layout/recent_activity_fragment.xml
+++ b/app/src/main/res/layout/recent_activity_fragment.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".recentActivity.RecentActivityFragment">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/image_profile"
@@ -108,7 +108,7 @@
                         android:id="@+id/interactions"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="@string/interactions"
                         app:layout_constraintEnd_toStartOf="@id/interactions_count"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -120,6 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="100"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -157,7 +158,7 @@
                         android:id="@+id/interactions_daily"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="@string/interactions"
                         app:layout_constraintEnd_toStartOf="@id/daily_interactions_count"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -169,6 +170,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="100"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -183,6 +185,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/margin_16dp"
+                android:paddingBottom="@dimen/margin_16dp"
                 app:cardElevation="@dimen/margin_16dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -207,7 +210,7 @@
                         android:id="@+id/interactions_monthly"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="@string/interactions"
                         app:layout_constraintEnd_toStartOf="@id/monthly_interactions_count"
                         app:layout_constraintHorizontal_chainStyle="packed"
@@ -219,6 +222,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/margin_8dp"
+                        android:padding="@dimen/margin_8dp"
                         android:text="100"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintHorizontal_chainStyle="packed"
