--- a/app/src/main/res/layout/basic_form_fragment.xml
+++ b/app/src/main/res/layout/basic_form_fragment.xml
@@ -91,6 +91,7 @@
                         android:id="@+id/locality_text"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:enabled="false"
                         android:inputType="text|textCapSentences" />
                 </com.google.android.material.textfield.TextInputLayout>
 
