--- a/app/src/main/res/layout/phone_number_single_layout.xml
+++ b/app/src/main/res/layout/phone_number_single_layout.xml
@@ -15,6 +15,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.card.MaterialCardView
+            android:id="@+id/phone_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/margin_16dp">
