Use cards in the layout.

--- a/app/src/main/res/layout/phone_number_single_layout.xml
+++ b/app/src/main/res/layout/phone_number_single_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -18,7 +19,9 @@
             android:id="@+id/phone_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_16dp">
+            android:layout_margin="@dimen/margin_16dp"
+            android:padding="@dimen/margin_16dp"
+            app:cardElevation="@dimen/margin_16dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -26,7 +29,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    style="@style/TextAppearance.AppCompat.Body1"
+                    style="@style/TextAppearance.MaterialComponents.Headline5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin_8dp"
@@ -35,8 +38,7 @@
                     tools:text="@string/nyeri_referral_hospital" />
 
                 <TextView
-
-                    style="@style/TextAppearance.AppCompat.Body2"
+                    style="@style/TextAppearance.MaterialComponents.Headline6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/margin_8dp"
