--- a/app/src/main/res/layout/call_help_fragment.xml
+++ b/app/src/main/res/layout/call_help_fragment.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_8dp"
-        android:text="Help Lines"
+        android:text="@string/help_lines"
         android:textAlignment="center"
         android:textAllCaps="true" />
 
