--- a/app/src/main/res/layout/national_disease_burden_single_item.xml
+++ b/app/src/main/res/layout/national_disease_burden_single_item.xml
@@ -17,10 +17,10 @@
         <com.google.android.material.card.MaterialCardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_8dp"
+            android:layout_margin="@dimen/margin_16dp"
             android:elevation="@dimen/margin_16dp">
 
-            <TextView
+            <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/disease_name"
                 style="@style/TextAppearance.MaterialComponents.Headline5"
                 android:layout_width="match_parent"
